[package]
name = "infra"
version = "0.3.0"
edition = "2021"

[dependencies]
tide = "0.16.0"
toml = "0.8.19"
sha1 = "0.10.6"
sha2 = "0.10.8"
md-5 = "0.10.6"
hcl-rs = "0.18.2"
chrono = "0.4.38"
bcrypt = "0.15.1"
base64 = "0.22.1"
tracing = "0.1.40"
macros-rs = "1.4.1"
owo-colors = "4.1.0"
ipnetwork = "0.20.0"
urlencoding = "2.1.3"
serde_json = "1.0.128"
tide-tracing = "0.1.1"
crypto-common = "0.1.6"
generic-array = "1.1.0"
serde_yaml_ng = "0.10.0"

uuid = { version = "1.11.0", features = ["v5"] }
serde = { version = "1.0.210", features = ["derive"] }
async-std = { version = "1.13.0", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
